feat: job_history 조회 api 추가
